<resources>
    <string name="appName">Simpson College Tour</string>
    <string name="mapOfSimpsonCollegeCampus">Map of Simpson College</string>
    <string name="wallaceHall">Wallace Hall</string>
    <string name="mcneillHall">McNeill Hall</string>
    <string name="hillmanHall">Hillman Hall</string>
    <string name="amyRobinson">Amy Robinson Music Center</string>
    <string name="smithChapel">Smith Memorial Chapel</string>
    <string name="carver_hall">Carver Hall</string>
    <string name="buxton_stadium">Bill Buxton Stadium</string>
    <string name="dunn_library">Dunn Library</string>
    <string name="college_hall">College Hall</string>
    <string name="mary_berry">Mary Berry Hall</string>
    <string name="pfieffer_great_hall">Pfieffer Dining and Great Hall</string>
    <string name="hopper">Hopper Gymnasium</string>
    <string name="kent">Kent Campus Center</string>
    <string name="cowles">Cowles Fieldhouse and Carse Hall</string>
    <string name="simpson_college_application">Simpson College Application</string>
    <string name="info_button">info_button</string>
    <string name="map_button">map_button</string>
    <string name="list_button">list_button</string>
    <string name="help_button">help_button</string>
    <string name="simpson_building_text">Simpson Buildings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="go_to_simpson_college_campus_map">Go to Simpson College campus map</string>
    <string name="back">Back</string>
    <string name="info_page_title">Information Page</string>
    <string name="creators_of_this_app">Creators of this App</string>
    <string name="content">Kenzie Jeter, Levi Lefebure, Noah Nelson, Elliott Meyers, Laura Nielsen, Kenyon Draper, Aiden Ruble, Allie Tubbs, Simon Van Den Abbeele, Sienna Hancock, Kennedi Wright, Kyra Pastor, Abby Loecke, Nick Squires, Hannah Spencer, Rachel Miller</string>
    <string name="simpson_college_history_app">Simpson College History App</string>
    <string name="help_page">Help Page</string>
    <string name="buttons_on_this_application">What are the functions of the buttons?</string>
    <string name="linktoSimpsonAdmissions">
    <a href= "https://simpson.edu/admission-aid" > Link to Simpson College Admissions</a>
    </string>
    <string name="linktoIowa">
    <a href= "https://simpson.edu/academics/beyond-classroom/centers-services/iowa-history-center" > Link to Iowa History Center</a>
    </string>
    <string name="linkToBillBuxton">
    <a href= "https://simpson.edu/internal/bill-buxton-stadium">https://simpson.edu/internal/bill-buxton-stadium </a>
    </string>
    <string name="billBuxtonAuthor">By: Kenyon Draper</string>
    <string name="billBuxtonHistory">\n\n\t\t\tIn 1998 the Simpson College football stadium was named Buxton Stadium in honor of William Buxton.
        The Buxton family had four generations of Simpson board members and have long resided in Warren County as financiers and farmers.
        They donated the land for Buxton Park, and have given money towards various projects on campus. Buxton Stadium has been in the same
        area since the 1950s but has received many renovations over the year, with many of these renovations taking place in 2010. The stadium
        hosts school-sponsored sports like football, soccer, and track. It is also home, however, to intramural competitions for Simpson students.
        The football field is located just south of the Kent Center and Cowles gymnasium.
        \n\n\t\t\tBuxton Field was one of the first fields in Iowa to upgrade to synthetic grass in 2001. In 2011, it was upgraded to a more state-of-the-art
        turf. The turf is managed and receives upkeep on a regular basis to keep it the best in the American Rivers Conference. It is also used as a
        practice field for fall sports like soccer and football. Occasionally Indianola Public Schools utilize the field or track for sporting events
        and activities. The multipurpose field is one of Simpson’s best additions to the collegiate experience.
        \n\n\t\t\tAn eight-lane track surrounds the football field, which was updated in 2011 by the company Beynon that also poured the University of Iowa’s
        track in the previous year. The track is a full-pour ten-millimeter surface. The track and cross-country teams utilize the track during their
        respective seasons. Buxton Stadium is the home of the Kip Janvrin Open, one of the largest outdoor track meets in the Midwest, boasting all NCAA
        divisions. The meet was renamed in 2006 in honor of the Olympic Decathlete, who graduated from Simpson in 1988.
        \n\n\t\t\tThe outside of the stadium was improved in 2010. There are two entrances composed of brick ticket booths and iron fencing surrounding
        the entirety of the stadium.  At the south entrance, there is an arch that has the Simpson College logo engraved.
    </string>
    <string name="linkToCarver">
    <a href= "https://simpson.edu/internal/carver-science-center">https://simpson.edu/internal/carver-science-center </a>
    </string>
    <string name="carverHistory">\n\n\t\t\tThe Carver Science Center was built in October of 1956, named after George Washington Carver. George Washington Carver
        studied Art and Piano at Simpson and is considered one of Simpson’s most famous students. Housed in the Carver Atrium since 1991, is a plaster statue
        of Carver as a young man, which went on to be used as the model to cast the bronze sculpture, “The Boy Carver,” located at the George Washington Carver
        National Monument in Missouri. This sculpture represents the potential and dreams of the son of a slave who went on to become a world-famous agricultural
        expert. Simpson was the first college to admit George Washington Carver, and Simpson continues to embrace that spirit today by providing all students with
        a dream and a willingness to work towards those dreams. For this reason, Carver Science Center found its namesake.
        \n\n\t\t\tBeing the primary science center on campus, the building is home to Simpson’s Mathematics, Computer Science, Biology, Environmental Science, Chemistry,
        and Physics Departments. The science hall is filled with chemistry, biology, and computer labs, all of which have been freshly renovated and include advanced
        technology such as an atomic force microscope. There is even a human cadaver lab in the basement of Carver Science Hall for upper level biology students to
        utilize and gain integral experience and insights that are unique on a small campus like Simpson’s. Carver Science Center is also home to Simpson’s largest
        classroom: Jordan Lecture Hall. This classroom seats 120 students, which is an excellent testament to Simpson’s small classes and personalized education values.
        Various departments will often utilize Jordan Lecture Hall as a location for campus lectures on different areas of research or education.
        \n\n\t\t\tWithin the walls of Carver Science Hall, there are also numerous bone and taxidermied animal displays. One of particular note is “DJ the Giraffe” on the East
        side of the second floor. DJ was a gift from the Blank Park Zoo and a couple of Simpson faculty members got to be a part of the process of preparing and installing
        the skeleton at Simpson. Almost a dozen other specimens of rare and endangered species adorn the walls. These were a kind gift of the Townsend family through Simpson’s
        partnership with the Great Ape Trust in Des Moines. The story of DJ and other gifts to the college are an excellent representation of Simpson’s partnerships and
        connections with Des Moines area and Iowa businesses. Carver Science Center has not always looked like it does today. In 1993 it underwent a massive remodeling project.
        This nine-million-dollar renovation and expansion project included the addition of the Carver atrium, Jordan Lecture Hall, and various labs. In the past five years,
        classrooms and labs have also been receiving renovations. In Summer 2017, the Biology lab on the first floor received the addition of state-of-the-art presentation
        technology and six laboratory pods where students can work as teams to collaborate on research projects. The rest of the first-floor classrooms and labs were also
        renovated in Summer 2019.
    </string>
    <string name="carverAuthor">By: Laura Nielsen</string>
    <string name="linkToBpac">
    <a href= "https://simpson.edu/internal/blank-performing-arts-center">https://simpson.edu/internal/blank-performing-arts-center </a>
    </string>
    <string name="developmentTeamTitle">Development Team:</string>
    <string name="developmentTeam">Genevieve Block, Kaitlyn Kottlowski, and George Saucedo</string>
    <string name="areYouInterestedTitle">Interested in Attending Simpson College?</string>
    <string name="clickAdmissionLinkText">Click the link below to apply:</string>
    <string name="clickIowaHistorySimpsonText">Click the link below to learn more about how you can be involved in the IHC:</string>
    <string name="anyQuestionsText">Have any questions about the Iowa History Center or Simpson\'s History Department?</string>
    <string name="emailFriedricksText">Email Bill Friedricks: Bill.Friedricks@simpson.edu</string>
    <string name="emailSinclairText">Email Linda Sinclair:\n Linda.Sinclair@simpson.edu</string>
    <string name="anyErrorsText">Problems with the App?</string>
    <string name="infoButtonExplanation">Information Button: Goes to the page that shows who helped create the application</string>
    <string name="helpButtonExplanation">Help Button: Goes to the help page that contains contact info and functionality of main page buttons.</string>
    <string name="mapButtonExplanation"> Map Button: Goes to a map of Simpson College with location markers marking Simpson buildings. The map will also
        display the user\'s location, if allowed. Once user clicks on a marker, it will take user to building\'s history page.</string>
    <string name="listButtonExplanation">List Button: Goes to a list of Simpson College buildings. From there, user can click on a button to see historical information about said building.</string>
</resources>